Use FFmpeg to read audio file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,6 +196,7 @@ qt_add_executable(NewCutTest
         MANUAL_FINALIZATION
         media/base/container_names_test.cc
         media/filters/audio_file_reader_test.cc
+        media/filters/ffmpeg_glue_test.cc
         media/filters/memory_url_protocol_test.cc
         )
 
