--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ target_sources(MultiMediaLibrary
         media/base/container_names.h
         media/base/decoder_buffer.cc
         media/base/decoder_buffer.h
+        media/base/limits.h
         media/base/sample_format.cc
         media/base/sample_format.h
         media/ffmpeg/ffmpeg_common.cc
