--- a/newcut/newcut_config.h.in
+++ b/newcut/newcut_config.h.in
@@ -2,3 +2,4 @@
 #define NewCut_VERSION_MAJOR    @NewCut_VERSION_MAJOR@
 #define NewCut_VERSION_MINOR    @NewCut_VERSION_MINOR@
 #define NewCut_VERSION_PATCH    @NewCut_VERSION_PATCH@
+#define MEDIA_TEST_FILE_DIR     "@CMAKE_SOURCE_DIR@"
