Fix Windows file path operator= error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,7 +214,7 @@ enable_testing()
 
 qt_add_executable(NewCutTest
         MANUAL_FINALIZATION
-        # base/files/file_path_test.cc
+        base/files/file_path_test.cc
         base/strings/string_util_test.cc
         base/strings/utf_string_conversions_test.cc
         media/base/audio_bus_test.cc
